# FileSystemAnalyzer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Application.h  ArgsParser.h  Config.h  FileSystemScanner.h  FsNode.h  SizeCalculator.h  TreeBuilder.h  TreePrinter.h
src/: Application.cpp  ArgsParser.cpp  FileSystemScanner.cpp  FsNode.cpp  SizeCalculator.cpp  TreeBuilder.cpp  TreePrinter.cpp
tests/: test_args_parser.cpp  test_file_system_scanner.cpp  test_fs_node.cpp  test_main.cpp  test_size_calculator.cpp  test_tree_builder.cpp  test_tree_printer.cpp
